Holy, status-bar is now fixed. Be careful for Invisible <div> in chat.html

--- a/css/components/alt-screen-header.css
+++ b/css/components/alt-screen-header.css
@@ -1,6 +1,6 @@
 .alt-header {
   padding: var(--horiziontal-space);
-  margin-bottom: 15px;
+  margin: 15px 0px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -11,12 +11,22 @@
   font-weight: 600;
 }
 
+.alt-header__column {
+  width: 33%;
+}
+
 .alt-header__column:first-child {
   margin-right: auto;
 }
 
+.alt-header__column:nth-child(2) {
+  text-align: center;
+}
+
 .alt-header__column:last-child {
   margin-left: auto;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .alt-header__column span:last-child {
