--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -3,7 +3,7 @@
   justify-content: space-between;
   align-items: center;
   padding: var(--horiziontal-space);
-  margin-bottom: 15px;
+  margin: 15px 0px;
 }
 
 .screen-header__title {
