--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -6,6 +6,7 @@
   top: 0px;
   width: 100%;
   box-sizing: border-box;
+  z-index: 99;
 }
 .status-bar__column {
   display: flex;
