--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,6 @@ body {
   font-family: "Open Sans", sans-serif;
   color: #2e363e;
   font-weight: 600;
-  height: 1000vh;
 }
 
 .main-screen {
